Edit color for button three to a darker color, to fix Contrast error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 .btn-three {
-    color: #FF6607;
+    color: #CC4E00;
     font-weight: bold;
 }
 
